--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,41 @@
            }
           h2{
             text-align: center;
-          }          
+          }
+          .center {
+              margin-top: 5%;
+              text-align: center;
+           }
+           .center h3{
+               margin-top: 2%;
+           }
+            img{
+                max-height: 100%;
+                max-width: 100%;
+            }
+            a{
+                color: white;
+            }
         </style>
   </head>
   
   <body>
     <div id='title'>
-      <h1> Pornmash </h1>
+        <p><h1> Pornmash </h1><a style="text-align: right;" href="top_100">Top 100</a></p>
     </div>
-    <h2>Who's hotter? Click to choose.</h2>
+
+    <div class="container">
+        <h2>Who's hotter? Click to choose.</h2>
+
+        <div class="col-xs-6 center">
+            <a href="/?girl_first={{ girl_first[0] }}&girl_second={{ girl_second[0] }}"><img src="/images/{{ girl_first[2] }}/{{ girl_first[0] }}"></a>
+            <h3>{{ girl_first[2] }}</h3>
+        </div>
+
+        <div class="col-xs-6 center">
+            <a href="/?girl_first={{ girl_second[0] }}&girl_second={{ girl_first[0] }}"><img src="/images/{{ girl_second[2] }}/{{ girl_second[0] }}"></a>
+            <h3>{{ girl_second[2] }}</h3>
+        </div>
+    </div>
   </body>
 </html>
