--- a/templates/index.html
+++ b/templates/index.html
@@ -54,5 +54,7 @@
             <h3>{{ girl_second[2] }}</h3>
         </div>
     </div>
+
+  <p style="font-size: 10px"><a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">Chat to me</a></p>
   </body>
 </html>
