--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,6 @@
         </div>
     </div>
 
-  <p style="font-size: 10px"><a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">Chat to me</a></p>
+  <a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
   </body>
 </html>
