--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,179 @@
-<DOCTYPE html>
-<html lang="en">
-  <head>
-      <!-- Required meta tags always come first -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">                 
-        <style>
-           #title{
-            width: 100%;
-            background: #a25252;
-            color: white;
-            text-transform: uppercase;
-            text-align: center;
-           }
-          h2{
-            text-align: center;
-          }
-          .center {
-              margin-top: 5%;
-              text-align: center;
-           }
-           .center h3{
-               margin-top: 2%;
-           }
-            img{
-                max-height: 100%;
-                max-width: 100%;
-            }
-            a{
-                color: white;
-            }
-        </style>
-  </head>
-  
-  <body>
-    <div id='title'>
-        <p><h1> Pornmash </h1><a style="text-align: right;" href="top_100">Top 100</a></p>
-    </div>
-
-    <div class="container">
-        <h2>Who's hotter? Click to choose.</h2>
-
-        <div class="col-xs-6 center">
-            <a href="/?girl_first={{ girl_first[0] }}&girl_second={{ girl_second[0] }}"><img src="/images/{{ girl_first[2] }}/{{ girl_first[0] }}"></a>
-            <h3>{{ girl_first[2] }}</h3>
+<!DOCTYPE html>
+    <html>
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta charset="utf-8"/>
+        <link type="text/css" rel="stylesheet" href="/default.css"></link>
+    </head>
+    <body class="area adaptive-sm-md-lg">
+    <div class="area font-text-opensanslight font-header-opensans adaptive-sm-md-lg">
+        <div class="node section section-clear node11">
+            <style>.node11 a {
+                color: rgb(25, 230, 156);
+            }</style>
+            <div class="wrapper1" style="color: rgb(243, 252, 249); background-color: rgb(45, 161, 119);">
+                <div class="wrapper2" style="padding-top: 30px; padding-bottom: 30px;">
+                    <div class="container"></div>
+                    <div class="macros-header"></div>
+                    <div class="container">
+                        <div class="cont">
+                            <div class="node node14 widget widget-header">
+                                <style>.node14 a {
+                                    color: rgb(25, 230, 156);
+                                }</style>
+                                <div class="wrapper1" style="color: rgb(243, 252, 249); border-radius: 0px;">
+                                    <div class="wrapper2" style="padding: 5px;">
+                                        <h1 class="xs-force-center"><p style="text-align: center;"><span
+                                                style="font-size: 40px;">PORNMASH</span></p></h1>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="node node15 widget widget-paragraph">
+                                <style>.node15 a {
+                                    color: rgb(25, 230, 156);
+                                }</style>
+                                <div class="wrapper1" style="color: rgb(243, 252, 249); border-radius: 0px;">
+                                    <div class="wrapper2" style="padding: 5px;">
+                                        <div class="xs-force-center"><p style="text-align: center;">TOP 100</p></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="col-xs-6 center">
-            <a href="/?girl_first={{ girl_second[0] }}&girl_second={{ girl_first[0] }}"><img src="/images/{{ girl_second[2] }}/{{ girl_second[0] }}"></a>
-            <h3>{{ girl_second[2] }}</h3>
+        <div class="node section section-clear node12">
+            <style>.node12 a {
+                color: rgb(25, 133, 230);
+            }</style>
+            <div class="wrapper1" style="color: rgb(2, 5, 8);">
+                <div class="wrapper2" style="padding-top: 30px; padding-bottom: 30px;">
+                    <div class="container"></div>
+                    <div class="macros-header"></div>
+                    <div class="container">
+                        <div class="cont">
+                            <div class="node node16 widget widget-grid">
+                                <style>.node16 a {
+                                    color: rgb(25, 133, 230);
+                                }</style>
+                                <div class="wrapper1" style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                    <div class="wrapper2" style="padding: 5px;">
+                                        <div class="grid valign-top paddings-20px xs-wrap">
+                                            <div class="gridwrap">
+                                                <div class="col" style="width: 50%;">
+                                                    <div class="cont">
+                                                        <div class="node node18 widget widget-image">
+                                                            <style>.node18 a {
+                                                                color: rgb(25, 133, 230);
+                                                            }</style>
+                                                            <div class="wrapper1"
+                                                                 style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                                                <div class="wrapper2" style="padding: 5px;">
+                                                                    <div class="xs-force-center"
+                                                                         style="text-align: center;"><img class=""
+                                                                                                          alt=""
+                                                                                                          data-lazy-image="//s.platformalp.ru/nodes/WidgetImage/default.png"
+                                                                                                          data-lazy-image_size="200,60"
+                                                                                                          data-lazy-image_detect="css-width"
+                                                                                                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                                                                                          style="width: 200px;">
+                                                                    </div>
+                                                                    <noscript><a href="/?girl_first={{ girl_first[0] }}&girl_second={{ girl_second[0] }}"><img
+                                                                            src="/images/{{ girl_first[2] }}/{{ girl_first[0] }}"
+                                                                            alt=""></a></noscript>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="node node19 widget widget-paragraph">
+                                                            <style>.node19 a {
+                                                                color: rgb(25, 133, 230);
+                                                            }</style>
+                                                            <div class="wrapper1"
+                                                                 style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                                                <div class="wrapper2" style="padding: 5px;">
+                                                                    <div class="xs-force-center"><p
+                                                                            style="text-align: center;">Abella
+                                                                        Danger</p></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col" style="width: 50%;">
+                                                    <div></div>
+                                                    <div class="cont">
+                                                        <div class="node node20 widget widget-image">
+                                                            <style>.node20 a {
+                                                                color: rgb(25, 133, 230);
+                                                            }</style>
+                                                            <div class="wrapper1"
+                                                                 style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                                                <div class="wrapper2" style="padding: 5px;">
+                                                                    <div class="xs-force-center"
+                                                                         style="text-align: center;"><img class=""
+                                                                                                          alt=""
+                                                                                                          data-lazy-image="//s.platformalp.ru/nodes/WidgetImage/default.png"
+                                                                                                          data-lazy-image_size="200,60"
+                                                                                                          data-lazy-image_detect="css-width"
+                                                                                                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+                                                                                                          style="width: 200px;">
+                                                                    </div>
+                                                                    <noscript><a href="/?girl_first={{ girl_second[0] }}&girl_second={{ girl_first[0] }}"><img
+                                                                            src="/images/{{ girl_second[2] }}/{{ girl_second[0] }}"
+                                                                            alt=""></a></noscript>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="node node21 widget widget-paragraph">
+                                                            <style>.node21 a {
+                                                                color: rgb(25, 133, 230);
+                                                            }</style>
+                                                            <div class="wrapper1"
+                                                                 style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                                                <div class="wrapper2" style="padding: 5px;">
+                                                                    <div class="xs-force-center"><p
+                                                                            style="text-align: center;">Riley Reid</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="node section section-clear node13">
+            <style>.node13 a {
+                color: rgb(25, 133, 230);
+            }</style>
+            <div class="wrapper1" style="color: rgb(2, 5, 8);">
+                <div class="wrapper2" style="padding-top: 30px; padding-bottom: 30px;">
+                    <div class="container"></div><!-- PLPLINK -->
+                    <div class="macros-header"></div>
+                    <div class="container">
+                        <div class="cont">
+                            <div class="node node17 widget widget-paragraph">
+                                <style>.node17 a {
+                                    color: rgb(25, 133, 230);
+                                }</style>
+                                <div class="wrapper1" style="color: rgb(2, 5, 8); border-radius: 0px;">
+                                    <div class="wrapper2" style="padding: 5px;">
+                                        <div class="xs-force-center"><a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p>Chat to me</p></a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- PLPLINK --> </div>
+            </div>
         </div>
     </div>
-
-  <a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
-  </body>
-</html>
+    </body>
+    </html>
