--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
             <h3>{{ girl_second[2] }}</h3>
         </div>
     </div>
-
-  <a href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
+  <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
+  <a style="float: right;" href="/"><p style="font-size: 20px; color: black">Get new photos.</p></a>
   </body>
 </html>
