--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                margin-top: 2%;
            }
             img{
-                max-height: 100%;
+                max-height: 400px;
                 max-width: 100%;
             }
             a{
