--- a/templates/index.html
+++ b/templates/index.html
@@ -56,5 +56,33 @@
     </div>
   <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
   <a style="float: right;" href="/"><p style="font-size: 20px; color: black">Get new photos.</p></a>
+  <!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter38296115 = new Ya.Metrika({
+                    id:38296115,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/38296115" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
   </body>
 </html>
