--- a/templates/index.html
+++ b/templates/index.html
@@ -45,12 +45,12 @@
         <h2>Who's hotter? Click to choose.</h2>
 
         <div class="col-xs-6 center">
-            <a href="/?girl_first={{ girl_first[0] }}&girl_second={{ girl_second[0] }}"><img src="/images/{{ girl_first[2] }}/{{ girl_first[0] }}"></a>
+            <a href="/?girl_first={{ girl_first[0] }}&girl_second={{ girl_second[0] }}"><img class="img-responsive" src="/images/{{ girl_first[2] }}/{{ girl_first[0] }}"></a>
             <h3>{{ girl_first[2] }}</h3>
         </div>
 
         <div class="col-xs-6 center">
-            <a href="/?girl_first={{ girl_second[0] }}&girl_second={{ girl_first[0] }}"><img src="/images/{{ girl_second[2] }}/{{ girl_second[0] }}"></a>
+            <a href="/?girl_first={{ girl_second[0] }}&girl_second={{ girl_first[0] }}"><img class="img-responsive" src="/images/{{ girl_second[2] }}/{{ girl_second[0] }}"></a>
             <h3>{{ girl_second[2] }}</h3>
         </div>
     </div>
