--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,11 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
         <style>
-           #title{
+body{
+  background: black;
+    color: white;
+}
+          #title{
             width: 100%;
             background: #a25252;
             color: white;
@@ -37,10 +41,6 @@
   </head>
 
   <body>
-    <div id='title'>
-        <p><h1> Pornmash </h1><a style="text-align: right;" href="top_100">Top 100</a></p>
-    </div>
-
     <div class="container">
         <h2>Who's hotter? Click to choose.</h2>
 
@@ -54,8 +54,8 @@
             <h3>{{ girl_second[2] }}</h3>
         </div>
     </div>
-  <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px; color: black">Chat to me</p></a>
-  <a style="float: right;" href="/"><p style="font-size: 20px; color: black">Get new photos.</p></a>
+  <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px;">Chat to me</p></a>
+  <a style="float: right;" href="/"><p style="font-size: 20px;">Get new photos.</p></a>
   <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
