Add skip and top 100 buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,6 @@ body{
   background: black;
     color: white;
 }
-          #title{
-            width: 100%;
-            background: #a25252;
-            color: white;
-            text-transform: uppercase;
-            text-align: center;
-           }
           h2{
             text-align: center;
           }
@@ -54,8 +47,9 @@ body{
             <h3>{{ girl_second[2] }}</h3>
         </div>
     </div>
-  <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px;">Chat to me</p></a>
-  <a style="float: right;" href="/"><p style="font-size: 20px;">Get new photos.</p></a>
+    <p style="text-align: center;" ><a href="/top_100">top 100</a></p>
+    <a style="float: left;" href="https://gitter.im/xenx/pornmash?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"><p style="font-size: 20px;">Chat to me</p></a>
+  <a style="float: right;" href="/"><p style="font-size: 20px;">Skip.</p></a>
   <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
