6 to 1 columns in top

--- a/templates/top_100.html
+++ b/templates/top_100.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 <style>
+    body{
+        background-color: black;
+        text-align: center;
+    }
     img{
         max-height: 100%;
         max-width: 100%;
